# Repideux

./: .gitignore  DESCRIPTION  NAMESPACE  README.md
R/: RcppExports.R  test.R
src/: Makevars  Makevars.win  RcppExports.cpp  repideux.cpp
src/epideux/: CMakeLists.txt  README.md
src/epideux/include/epideux/: epideux.h
src/epideux/src/: itinerary_entry.cpp  location.cpp  model.cpp  person.cpp
src/epideux/tests/: CMakeLists.txt  test_small_simulation.cpp
